[gd_scene format=3 uid="uid://2ihpv5lofu7"]

[ext_resource type="Theme" uid="uid://c7hxjq3eputar" path="res://ui/themes/main_theme.tres" id="1_qpy53"]
[ext_resource type="Script" uid="uid://df7i2jm0omwku" path="res://ui/start_menu/start_menu.gd" id="2_nhkli"]
[ext_resource type="PackedScene" uid="uid://civlww5pwckf6" path="res://ui/components/background.tscn" id="3_eawnk"]
[ext_resource type="Texture2D" uid="uid://btewnc55k2ygn" path="res://icon.svg" id="3_ixxch"]
[ext_resource type="FontFile" uid="uid://brv6dxdfw48rw" path="res://fonts/lato-bold.ttf" id="4_nhkli"]

[sub_resource type="LabelSettings" id="LabelSettings_lb6g3"]
font = ExtResource("4_nhkli")
font_size = 80

[node name="StartMenu" type="Control" unique_id=1556927527]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qpy53")
script = ExtResource("2_nhkli")

[node name="Background" parent="." unique_id=184611907 instance=ExtResource("3_eawnk")]
layout_mode = 1
offset_left = 0.0
offset_top = 0.0
metadata/_edit_lock_ = true

[node name="Icon" type="TextureRect" parent="." unique_id=648941009]
modulate = Color(1, 1, 1, 0.5019608)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -564.0
offset_top = -408.0
offset_right = 416.0
offset_bottom = 572.0
grow_horizontal = 0
pivot_offset = Vector2(490, 490)
texture = ExtResource("3_ixxch")
expand_mode = 1
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="Content" type="VBoxContainer" parent="." unique_id=1850655367]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 192.0
offset_top = 120.0
offset_right = -1120.0
offset_bottom = -120.0
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="Content" unique_id=1405412069]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
text = "FEM Simulator"
label_settings = SubResource("LabelSettings_lb6g3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Space" type="Control" parent="Content" unique_id=1785088153]
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Content" unique_id=1486480296]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
alignment = 1

[node name="StartButton" type="Button" parent="Content/Buttons" unique_id=1584109864]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Iniciar"

[node name="CreditsButton" type="Button" parent="Content/Buttons" unique_id=831186375]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Créditos"

[node name="QuitButton" type="Button" parent="Content/Buttons" unique_id=1039005435]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Salir"

[node name="Quit" type="Control" parent="." unique_id=165304320]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuitBackground" type="ColorRect" parent="Quit" unique_id=915307788]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5019608)

[node name="Panel" type="PanelContainer" parent="Quit" unique_id=507046994]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -87.5
offset_right = 130.0
offset_bottom = 87.5
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="Quit/Panel" unique_id=601065992]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Contents" type="VBoxContainer" parent="Quit/Panel/Margin" unique_id=844005421]
layout_mode = 2

[node name="Label" type="Label" parent="Quit/Panel/Margin/Contents" unique_id=1358970608]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 2.0
text = "¿Seguro que quieres salir?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Control" type="Control" parent="Quit/Panel/Margin/Contents" unique_id=362562501]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="YesButton" type="Button" parent="Quit/Panel/Margin/Contents" unique_id=811163896]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_font_sizes/font_size = 24
text = "Si"

[node name="NoButton" type="Button" parent="Quit/Panel/Margin/Contents" unique_id=1609535645]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_font_sizes/font_size = 24
text = "No"

[connection signal="pressed" from="Content/Buttons/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Content/Buttons/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Content/Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Quit/Panel/Margin/Contents/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="Quit/Panel/Margin/Contents/NoButton" to="." method="_on_no_button_pressed"]
